# OMNIXIUS

./: .gitattributes  .gitignore  404.html  API.md  ARCHITECTURE-V4-PART2.md  ARCHITECTURE-V4.md  ARCHITECTURE.md  AUDIT-AND-PLAN-10-UPDATES.md  AUDIT-WHAT-TO-ADD-NEXT.md  AUDIT.md  DEVELOPMENT.md  ECOSYSTEM.md  HORIZON-DESIGN.md  IDEAL-NEXT.md  IMPLEMENTATION-V4.md  IMPROVEMENTS.md  LANGUAGES-AUDIT.md  MIGRATION-FRONTEND.md  NAPRAVLENIYA.md  OMNIXIUS_CHECKLIST.md  OPEN-SITE.txt  PLATFORM.md  PLATFORM_INFRASTRUCTURE.md  POLNOE-TZ.md  PRIVACY.md  PROJECT_HISTORY.md  QUANTUM_READINESS.md  README.md  ROADMAP.md  STACK.md  STATUS-V4.md  STRUCTURE.md  TECHNICAL-DOCUMENT.md  WHAT-WE-TAKE.md  architecture.html  contact.html  ecosystem.html  horizon.html  index.html  push-to-github.bat  (+10 more)
ai/: README.md  install.ps1  main.py  requirements.txt
app/: admin.html  ai.html  closed-content.html  config.js  connect.html  conversation.html  dashboard.html  directions.html  forgot-password.html  ixi.html  learning.html  links.html  login.html  mail.html  marketplace.html  media.html  notifications.html  orders.html  product-create.html  product.html  profile-edit.html  profile.html  register.html  remittances.html  repositorium.html  reset-password.html  rewards.html  settings.html  startups.html  test-register.html  trade.html  vault.html  wallet.html
backend-go/: .env.example  Dockerfile  README.md  auth_service.go  balance_service.go  config.go  conversation_service.go  go.mod  go.sum  main.go  ws_hub.go  (+10 more)
services/rust/: Cargo.toml  Dockerfile  README.md
services/rust/src/: main.rs
(+217 files in other folders)
