[package]
name = "omnixius-rust"
version = "0.1.0"
edition = "2021"
description = "OMNIXIUS — video, search, heavy compute (Rust)"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
